# ProveNuance

./: .env  .env.example  .gitignore  Dockerfile  config.py  contracts.py  description.md  docker-compose.yml  implementationPlan.md  ner.md  nerlink_demo.py  nerlink_spec.md  pn.bat  pn.ps1  provenuance.py  pyproject.toml  requirements.txt  stanza_demo.py  textbook.md  train_math_ner.py
adapters/: __init__.py  rule_bootstrap.py  rule_bootstrap_adapter.py  text_cleaner.py
adapters/document_store/: __init__.py  postgres_document_store.py
adapters/entity_linker/: __init__.py  dict_entity_linker.py
adapters/evaluator/: ast_evaluator.py
adapters/frame_extractor/: _printer.py  llm_extractor.py  rule_based_extractor.py  stanza_aware_extractor.py
adapters/frame_mapper/: math_grade1to3_mapper.py
adapters/knowledge_store/: __init__.py  postgres_knowledge_store.py
adapters/math_problem_parser/: llm_parser.py  (+1 more)
api/: dependencies.py  main.py  schemas.py
data/: cli_proofs.json
ports/: __init__.py  document_store.py  entity_linker.py  evaluator.py  frame_extractor.py  frame_mapper.py  knowledge_store.py  math_problem_parser.py  reasoner.py  rule_bootstrap.py  validator.py
provenuance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stanza_math_ner_dataset/: README.md  dev.conll  test.conll  train.conll
tests/: test_llm_math_parser.py  test_math_grade1to3_mapper.py  test_regex_math_parser.py  test_rule_based_extractor.py  test_rule_bootstrap.py  test_solver_steps.py  test_stanza_aware_inline_arith.py  test_text_cleaner.py
(+36 files in other folders)
